added custom linkedin url

--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
     <a href="mailto:vhp@fastmail.fm">Email</a>
     <a href="https://github.com/vhp">Resume</a>
     <a href="https://github.com/vhp">Github</a>
-    <a href="https://www.linkedin.com/pub/vincent-perricone/15/131/838">Linkedin</a>
+    <a href="https://www.linkedin.com/in/VincentPerricone">Linkedin</a>
   </body>
 </html>
